--- a/templates/home.html
+++ b/templates/home.html
@@ -4,25 +4,37 @@
     <title>
         HireSphere
     </title>
-    <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    
+    <!-- <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css" /> -->
+    <style>
+        #banner{
+            width: 100%;
+            height: 360px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-<div id="container">
-    <h1>Welcome to career site</h1>
-    <image id= "banner" src="http://127.0.0.1:5000/static/banner1.jpeg" >
-    <h2>About HireSphere</h2>
-    <p>
+<div class="container">
+    <h1 class="text-center mt-4 mb-4">HireSphere</h1>
+    <image class="img-fluid" id= "banner" src="http://127.0.0.1:5000/static/banner1.jpeg" >
+    <h2 class="text-center mt-4 mb-2">About Us</h2>
+    <p class="lead"> 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <h2>Open positions</h2>
-    <p>TODo- Show te jobs here</p>
-    <div style="text-align: center;">
-        <button>Contact Us</button>
+    <h2 class="text-center mt-2 mb-4">Open positions</h2>
+    <div>{% for job in jobs %}
+        {% include 'jobitem.html' %}
+        {% endfor %}
+    </div>
+    <div class="text-center">
+        <button class="btn btn-primary btn-large">Contact Us</button>
+        <p class="mt-4">&copy; 2023 Job Career Website. All Rights Reserved.</p>
     </div>
 </div>
-<footer>
-    <p>&copy; 2023 Job Career Website. All Rights Reserved.</p>
-</footer>
 </body>
 
 </html>
