--- a/templates/home.html
+++ b/templates/home.html
@@ -4,23 +4,12 @@
     <title>
         HireSphere
     </title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    
+    {% include 'bootstrap.html' %}
     <!-- <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css" /> -->
-    <style>
-        #banner{
-            width: 100%;
-            height: 360px;
-            object-fit: cover;
-            margin-bottom: 16px;
-        }
-    </style>
 </head>
 <body>
     {% include 'nav.html' %}
-    <image class="img-fluid" id= "banner" src="http://127.0.0.1:5000/static/banner1.jpeg" ></image>
+    {% include 'banner.html' %}
 <div class="container">
     <h1 class="text-center mt-4 mb-4">HireSphere</h1>
     <p class="lead"> 
