--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="col-2">
-            <button class="btn btn-outline-primary">Apply</button>
+            <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
         </div>
     </div>
    
