added application submit form

--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -25,6 +25,11 @@
             </ol>
             <h3>Salary</h3>
             <p>{{job.currency}}{{job.salary}}</p>
+            {% include 'application_form.html' %}
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary btn-large">Contact Us</button>
+            <p class="mt-4">&copy; 2023 Job Career Website. All Rights Reserved.</p>
         </div>
     </body>
 </html>
